@@ -1,4 +1,11 @@
 ﻿===== Smarty 3.1-DEV  =====
+26/07/2011
+- bugfix experimental getTags() method did not work
+
+24/07/2011
+- sure opened output buffers are closed on exception
+- bugfix {foreach} did not work on IteratorAggregate
+
 22/07/2011
 - clear internal caches on clearAllCache(), clearCache(), clearCompiledTemplate()
 
